chore: code review 6